# dice-game-win-probability

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt
dice_game_win_probability/: __init__.py  __main__.py
dice_game_win_probability/application/: __init__.py  service.py
dice_game_win_probability/config/: __init__.py  config.py
dice_game_win_probability/di/: __init__.py  application.py  configuration.py  core.py  domain.py
dice_game_win_probability/domain/dice/: __init__.py  errors.py  service.py
dice_game_win_probability/logger/: log_levels.py  logger.py
dice_game_win_probability/presentation/dice/: __init__.py  dice.py
dice_game_win_probability/tests/unit/: test_dice_service.py
